# Vision-Agents

./: .coderabbit.yaml  .pre-commit-config.yaml  PRODUCTION.md  README.md  SECURITY.md  conftest.py  dev.py  pytest.ini
.cursor/rules/: python.mdc
.github/workflows/: release.yml  run_tests.yml
agents-core/: README.md
agents-core/vision_agents/: PROTOBUF_GENERATION.md  _generate_sfu_events.py
agents-core/vision_agents/core/: cli.py  instructions.py
docs/ai/instructions/: ai-events-example.md  ai-llm.md  ai-plugin.md  ai-stt.md  ai-tests.md  ai-turn-detector.md  ai-update.md
examples/01_simple_agent_example/: README.md  simple_agent_example.py
examples/02_golf_coach_example/: README.md  golf_coach.md
examples/other_examples/07_function_calling_example/: pyproject.toml
examples/other_examples/09_github_mcp_demo/: README.md
examples/other_examples/gemini_live_realtime/: voice-agent.md
examples/other_examples/plugins_examples/vad_silero/: pyproject.toml
plugins/: plugin_test_utils.py
plugins/aws/: README.md
plugins/cartesia/: README.md
plugins/decart/: pyproject.toml
plugins/deepgram/: README.md
plugins/fast_whisper/: pyproject.toml
plugins/fish/: README.md  pyproject.toml
plugins/heygen/: README.md  pyproject.toml
plugins/inworld/: pyproject.toml
plugins/moondream/: README.md  pyproject.toml
plugins/openai/: README.md
plugins/openrouter/: pyproject.toml
plugins/roboflow/: README.md
plugins/smart_turn/: pyproject.toml
plugins/vogent/: pyproject.toml
plugins/wizper/: README.md
plugins/xai/: README.md
(+115 files in other folders)
