[project]
name = "function-calling-example"
version = "0.1.0"
description = "Example demonstrating function calling capabilities"
authors = [
    {name = "Stream", email = "dev@getstream.io"},
]
dependencies = [
    "python-dotenv",
    "vision-agents-plugins-openai",
    "vision-agents-plugins-anthropic",
    "vision-agents-plugins-gemini",
    "vision-agents",
]
requires-python = ">=3.10"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.uv.sources]
"vision-agents-plugins-openai" = {path = "../../../plugins/openai", editable=true}
"vision-agents-plugins-anthropic" = {path = "../../../plugins/anthropic", editable=true}
"vision-agents-plugins-gemini" = {path = "../../../plugins/gemini", editable=true}
"vision-agents" = {path = "../../../agents-core", editable=true}
