[project]
name = "vad-silero-example"
version = "0.1.0"
description = "Stream Video + Silero VAD demo."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }

dependencies = [
    "vision-agents-plugins-silero>=0.1.0",
    "python-dotenv>=1.1.1",
    "getstream-plugins-common>=0.1.0",
]
